--- a/geopost/geopost/Views/Web.config
+++ b/geopost/geopost/Views/Web.config
@@ -26,6 +26,7 @@
         <add namespace="Examine" />
         <add namespace="Umbraco.Web.PublishedContentModels" />
         <add namespace="geopost.Models" />
+        <add namespace="geopost.Domain.Models.UmbracoIdentity"/>
         <add namespace="Our.Umbraco.Vorto.Extensions" />
       </namespaces>
     </pages>
