--- a/geopost/geopost/packages.config
+++ b/geopost/geopost/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
+  <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net461" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="ClientDependency" version="1.9.7" targetFramework="net461" />
@@ -58,6 +61,10 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="semver" version="1.1.2" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.4.3" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web" version="4.4.3" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.4.3" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.4.3" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net461" />
