--- a/geopost/geopost/uSync/data/DocumentType/data/data-site-settings/def.config
+++ b/geopost/geopost/uSync/data/DocumentType/data/data-site-settings/def.config
@@ -113,6 +113,18 @@
       <Tab>Footer Settings</Tab>
     </GenericProperty>
     <GenericProperty>
+      <Key>b1580e44-8672-49ff-8604-a724a4eb65c9</Key>
+      <Name>Site Login Page</Name>
+      <Alias>siteLoginPage</Alias>
+      <Definition>b4e3535a-1753-47e2-8568-602cf8cfee6f</Definition>
+      <Type>Umbraco.RelatedLinks2</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab>Global Settings</Tab>
+    </GenericProperty>
+    <GenericProperty>
       <Key>e7b30d07-98fa-4127-863e-6f145e30ef1e</Key>
       <Name>Site Search Page</Name>
       <Alias>siteSearchPage</Alias>
