--- a/geopost/geopost/uSync/data/DocumentType/pages/page-home/def.config
+++ b/geopost/geopost/uSync/data/DocumentType/pages/page-home/def.config
@@ -15,7 +15,7 @@
     <AllowedTemplates />
   </Info>
   <Structure>
-    <DocumentType Key="90a880d0-a64e-446e-a757-e5ae573c7c1d">containerPostCategory</DocumentType>
+    <DocumentType Key="90a880d0-a64e-446e-a757-e5ae573c7c1d">pagePostCategory</DocumentType>
   </Structure>
   <GenericProperties>
     <GenericProperty>
