--- a/geopost/geopost.Domain/App.config
+++ b/geopost/geopost.Domain/App.config
@@ -56,7 +56,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<connectionStrings>
-  <add name="Default_GPEntities" connectionString="metadata=res://*/GeopostEntityDataModel.csdl|res://*/GeopostEntityDataModel.ssdl|res://*/GeopostEntityDataModel.msl;provider=System.Data.SqlClient;provider connection string='data source=.\SQLEXPRESS;initial catalog=&quot;Default GP&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
+<connectionStrings><add name="Default_GPEntities" connectionString="metadata=res://*/GeopostEntityDataModel.csdl|res://*/GeopostEntityDataModel.ssdl|res://*/GeopostEntityDataModel.msl;provider=System.Data.SqlClient;provider connection string='data source=.\SQLEXPRESS;initial catalog=&quot;Default GP&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /><add name="DataContext" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string='data source=.\SQLEXPRESS;initial catalog=&quot;Default GP&quot;;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
   <add name="DefaultGP" connectionString="server=DXC-24\SQLEXPRESS;database=Default GP;user id=sa;password='Dr0xicteam'" providerName="System.Data.SqlClient" />
 </configuration>
