--- a/geopost/geopost/Web.config
+++ b/geopost/geopost/Web.config
@@ -52,7 +52,8 @@
     <add key="enableSimpleMembership" value="false" />
     <add key="autoFormsAuthentication" value="false" />
     <add key="log4net.Config" value="config\log4net.config" />
-    <add key="owin:appStartup" value="UmbracoIdentityStartup" />
+    <!--<add key="owin:appStartup" value="UmbracoIdentityStartup" />-->
+    <add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="AppData" />
   </appSettings>
@@ -413,6 +414,10 @@
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.9.12.0" newVersion="6.9.12.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
