--- a/geopost/geopost/uSync/data/DocumentType/pages/page-post-category/def.config
+++ b/geopost/geopost/uSync/data/DocumentType/pages/page-post-category/def.config
@@ -7,7 +7,7 @@
     <Icon>icon-umb-contour color-cyan</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
+    <AllowAtRoot>True</AllowAtRoot>
     <IsListView>False</IsListView>
     <Folder>Pages</Folder>
     <Compositions>
